ftpreview/dlli.h

// for icuii, "automatic" should be set, which
// tells the capture driver to figure it out as
// best it can. warning: there may be bugs in here
// related to the driver overriding some settings
// when it is in "automatic" mode. i have to check
// this out more.
int DWYCOEXPORT
dwyco_set_vidcap_data(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(const char *, device)
    DWUIDECLARG(const char *, b_and)
    DWUIDECLARG(const char *, b_or)
    DWUIDECLARG(const char *, b_xor)
    DWUIDECLARG(const char *, offset)
    DWUIDECLARG(bool, blue)
    DWUIDECLARG(bool, green)
    DWUIDECLARG(bool, red)
    DWUIDECLARG(bool, rgb16)
    DWUIDECLARG(bool, rgb24)
    DWUIDECLARG(bool, use_one_plane)
    DWUIDECLARG(bool, yuv9)
    DWUIDECLARG(bool, upside_down)	// icuii: set to 1 if "my pic is upside down" is checked
    DWUIDECLARG(bool, palette)
    DWUIDECLARG(bool, automatic)   	// icuii: set to 1, everything else 0
    DWUIDECLARG(bool, enable_color) // icuii: set to 1 if "color camera" is selected
    DWUIDECLARG(bool, yuv12)
    DWUIDECLARG(bool, swap_uv)		// icuii: set to 1 if "my face is blue" is set
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_vidcap_data(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(const char *, device)
    DWUIDECLARG_OUT(const char *, b_and)
    DWUIDECLARG_OUT(const char *, b_or)
    DWUIDECLARG_OUT(const char *, b_xor)
    DWUIDECLARG_OUT(const char *, offset)
    DWUIDECLARG_OUT(bool, blue)
    DWUIDECLARG_OUT(bool, green)
    DWUIDECLARG_OUT(bool, red)
    DWUIDECLARG_OUT(bool, rgb16)
    DWUIDECLARG_OUT(bool, rgb24)
    DWUIDECLARG_OUT(bool, use_one_plane)
    DWUIDECLARG_OUT(bool, yuv9)
    DWUIDECLARG_OUT(bool, upside_down)
    DWUIDECLARG_OUT(bool, palette)
    DWUIDECLARG_OUT(bool, automatic)
    DWUIDECLARG_OUT(bool, enable_color)
    DWUIDECLARG_OUT(bool, yuv12)
    DWUIDECLARG_OUT(bool, swap_uv)
    DWUIDECLARG_END
);
// this is miscellaneous UI config
// that isn't used in ICUII.
int DWYCOEXPORT
dwyco_set_config_display(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(bool, fit_video)
    DWUIDECLARG(bool, integral_zoom)
    DWUIDECLARG(bool, jumbo_buttons)
    DWUIDECLARG(bool, no_buttons)
    DWUIDECLARG(bool, small_buttons)
    DWUIDECLARG(bool, mini_toolbar)
    DWUIDECLARG(bool, blinky)
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_config_display(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(bool, fit_video)
    DWUIDECLARG_OUT(bool, integral_zoom)
    DWUIDECLARG_OUT(bool, jumbo_buttons)
    DWUIDECLARG_OUT(bool, no_buttons)
    DWUIDECLARG_OUT(bool, small_buttons)
    DWUIDECLARG_OUT(bool, mini_toolbar)
    DWUIDECLARG_OUT(bool, blinky)
    DWUIDECLARG_END
);
// this is only used for testing without
// a camera. it is NOT used in ICUII.
int DWYCOEXPORT
dwyco_set_raw_files(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(const char *, raw_files_list)
    DWUIDECLARG(const char *, raw_files_pattern)
    DWUIDECLARG(bool, use_list_of_files)
    DWUIDECLARG(bool, use_pattern)
    DWUIDECLARG(bool, preload)
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_raw_files(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(const char *, raw_files_list)
    DWUIDECLARG_OUT(const char *, raw_files_pattern)
    DWUIDECLARG_OUT(bool, use_list_of_files)
    DWUIDECLARG_OUT(bool, use_pattern)
    DWUIDECLARG_OUT(bool, preload)
    DWUIDECLARG_END
);
// this tells the DLL what device should
// be used as a video source.
int DWYCOEXPORT
dwyco_set_video_input(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(const char *, device_name)	// icuii: use this to store the capture driver name if you need to. NOTE: not used by the DLL otherwise.
    DWUIDECLARG(bool, coded)  			// not used.
    DWUIDECLARG(bool, raw)				// icuii: set to 0. if 1 uses "raw files" config
    DWUIDECLARG(bool, vfw)				// icuii: set to 1 if "capture using camera" is checked
    DWUIDECLARG(bool, no_video)			// icuii: set to 1 if "no video" is checked
    DWUIDECLARG(int, device_index)		// not used, but you can use it to store the index if needed.
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_video_input(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(const char *, device_name)
    DWUIDECLARG_OUT(bool, coded)
    DWUIDECLARG_OUT(bool, raw)
    DWUIDECLARG_OUT(bool, vfw)
    DWUIDECLARG_OUT(bool, no_video)
    DWUIDECLARG_OUT(int, device_index)
    DWUIDECLARG_END
);
// this is the call screening stuff
// in ICUII, most of this is not exposed to users, and it is
// set according to whatever mode (single user
// vs. multiuser) you are in. in CDC32, there
// is a dialog the users can tweak.
int DWYCOEXPORT
dwyco_set_call_accept(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(int , max_audio)		// max # of audio streams you will send
    DWUIDECLARG(int , max_chat)         // max # if PUBLIC chat streams you will accept
    DWUIDECLARG(int , max_video)		// max # of video streams you will send
    DWUIDECLARG(int , max_audio_recv)	// max # of audio streams you will receive
    DWUIDECLARG(int , max_video_recv)   // max # of video streams you will receive
    DWUIDECLARG(int , max_pchat)        // max # of private chat streams you will accept
    DWUIDECLARG(const char * , pw)			// icuii: connection password required to connect
    DWUIDECLARG(bool, auto_accept)		// icuii: 1 if "accept calls automatically" is checked
    DWUIDECLARG(bool, require_pw)       // icuii: 1 if "require password" is checked
    DWUIDECLARG(bool, accept_any_rating)// icuii: 1 if "accept calls from other ratings" is checked
    DWUIDECLARG(bool, no_listen)		// icuii: always 0
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_call_accept(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(int , max_audio)
    DWUIDECLARG_OUT(int , max_chat)
    DWUIDECLARG_OUT(int , max_video)
    DWUIDECLARG_OUT(int , max_audio_recv)
    DWUIDECLARG_OUT(int , max_video_recv)
    DWUIDECLARG_OUT(int , max_pchat)
    DWUIDECLARG_OUT(const char * , pw)
    DWUIDECLARG_OUT(bool, auto_accept)
    DWUIDECLARG_OUT(bool, require_pw)
    DWUIDECLARG_OUT(bool, accept_any_rating)
    DWUIDECLARG_OUT(bool, no_listen)
    DWUIDECLARG_END
);
// assorted zap message setup
int DWYCOEXPORT
dwyco_set_zap_data(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(bool, always_server)	// icuii: always 0
    DWUIDECLARG(bool, always_accept)    // icuii: 1 if "auto-accept quick messages" is checked
    DWUIDECLARG(bool, ignore)           // icuii: always 0
    DWUIDECLARG(bool, recv_all)         // icuii: always 1
    DWUIDECLARG(bool, zsave)            // icuii: always 0
    DWUIDECLARG(bool, use_old_timing)   // icuii: 1 if "qm's move too fast or not at all" checked (in obscure tab)
    DWUIDECLARG(bool, save_sent)   		// icuii: 1 by default, 0 to turn off automatic "sent" qm saving
    DWUIDECLARG(bool, no_forward_default)	// icuii: 0 by default
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_zap_data(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(bool, always_server)
    DWUIDECLARG_OUT(bool, always_accept)
    DWUIDECLARG_OUT(bool, ignore)
    DWUIDECLARG_OUT(bool, recv_all)
    DWUIDECLARG_OUT(bool, zsave)
    DWUIDECLARG_OUT(bool, use_old_timing)
    DWUIDECLARG_OUT(bool, save_sent)
    DWUIDECLARG_OUT(bool, no_forward_default)
    DWUIDECLARG_END
);
// these are networking rates and capture
// frame rates.
int DWYCOEXPORT
dwyco_set_rate_tweaks(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(double, max_frame_rate)	// icuii: set to 10 (could be a slider tho) fractional frame rates are accepted
    DWUIDECLARG(long, max_udp_bytes) 	// not used, set to 65535
    DWUIDECLARG(long, link_speed)       // set to Kbps xmit on link (modem tab)
    DWUIDECLARG(long, link_speed_recv)  // set to Kbps recv on link (modem tab)
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_rate_tweaks(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(double, max_frame_rate)
    DWUIDECLARG_OUT(long, max_udp_bytes)
    DWUIDECLARG_OUT(long, link_speed)
    DWUIDECLARG_OUT(long, link_speed_recv)
    DWUIDECLARG_END
);
// used for media select arg in the net data
// WARNING: the values of these defines were copied from aconn.h
// WARNING: the only value that works is "TCP_ONLY"
// NOTE: ca 2016, all the internal STUN and UPNP stuff does not work.
// STUN/UDP media was abandoned because it is just too problematic
// from a tech support perspective. UPnP, when it was tested, was also
// too flakey to rely on. ca 2018, Possibly UPnP could be revisited now that
// routers are implementing it more reliably.

#define DWYCO_MEDIA_SELECT_DIRECT_ONLY 0  	// not impl.
#define DWYCO_MEDIA_SELECT_TCP_ONLY 1 		// force tcp SAC only
#define DWYCO_MEDIA_SELECT_UDP_ONLY 2		// force udp SAC only
#define DWYCO_MEDIA_SELECT_HANDSHAKE 3		// try to figure out cheapest way
int DWYCOEXPORT
dwyco_set_net_data(
    DWUIDECLARG_BEGIN
    DWUIDECLARG(int, primary_port) 				// primary listener, icuii: 2000
    DWUIDECLARG(int, secondary_port) 			// secondary listenter icuii: 9745
    DWUIDECLARG(int, pal_port)		 			// pal listener icuii: 6782
    DWUIDECLARG(int, nat_primary_port)			// icuii: 0
    DWUIDECLARG(int, nat_secondary_port)		// icuii: 0
    DWUIDECLARG(int, nat_pal_port)				// icuii: 0
    DWUIDECLARG(bool, advertise_nat_ports)		// icuii: 0
    DWUIDECLARG(int, disable_upnp)				// icuii: 0 , disabled for compat right now
    DWUIDECLARG(int, media_select)				// defaults to "handshake", see *MEDIA_SEL* defines
    DWUIDECLARG_END
);
int DWYCOEXPORT
dwyco_get_net_data(
    DWUIDECLARG_BEGIN
    DWUIDECLARG_OUT(int, primary_port)
    DWUIDECLARG_OUT(int, secondary_port)
    DWUIDECLARG_OUT(int, pal_port)
    DWUIDECLARG_OUT(int, nat_primary_port)
    DWUIDECLARG_OUT(int, nat_secondary_port)
    DWUIDECLARG_OUT(int, nat_pal_port)
    DWUIDECLARG_OUT(bool, advertise_nat_ports)
    DWUIDECLARG_OUT(int, disable_upnp)
    DWUIDECLARG_OUT(int, media_select)
    DWUIDECLARG_END
);