bld/cdc32/old/cdcdll.pas


function dwyco_set_user_data(description: PChar;
                             username: PChar;
                             email: PChar;
                             last_name: PChar;
                             first_name: PChar;
                             dummy : Integer
                             ): Integer ;stdcall   ;

function dwyco_get_user_data(var description: PChar;
                             var username: PChar;
                             var email: PChar;
                             var last_name: PChar;
                             var first_name: PChar;
                             dummy : Integer
                             ): Integer ;stdcall   ;

function dwyco_set_vidcap_data(device: PChar; 
                               and_mask: PChar;
                               or_mask: PChar;
                               xor_mask: PChar;
                               offset: PChar;
                               blue: DWYCO_BOOL;
                               green: DWYCO_BOOL;
                               red: DWYCO_BOOL;
                               rgb16: DWYCO_BOOL;
                               rgb24: DWYCO_BOOL;
                               use_one_plane: DWYCO_BOOL;
                               yuv9: DWYCO_BOOL;
                               upside_down: DWYCO_BOOL;
                               palette: DWYCO_BOOL;
                               automatic: DWYCO_BOOL;
                               enable_color: DWYCO_BOOL;
                               yuv12: DWYCO_BOOL;
                               swap_uv: DWYCO_BOOL;
                               dummy : Integer
                               ): Integer ;stdcall   ;

function dwyco_get_vidcap_data(var device: PChar;
                               var and_mask: PChar;
                               var or_mask: PChar;
                               var xor_mask: PChar;
                               var offset: PChar;
                               var blue: DWYCO_BOOL;
                               var green: DWYCO_BOOL;
                               var red: DWYCO_BOOL;
                               var rgb16: DWYCO_BOOL;
                               var rgb24: DWYCO_BOOL;
                               var use_one_plane: DWYCO_BOOL;
                               var yuv9: DWYCO_BOOL;
                               var upside_down: DWYCO_BOOL;
                               var palette: DWYCO_BOOL;
                               var automatic: DWYCO_BOOL;
                               var enable_color: DWYCO_BOOL;
			       var yuv12 : DWYCO_BOOL;
			       var swap_uv : DWYCO_BOOL;
                               dummy : Integer
                               ): Integer ;stdcall   ;

function dwyco_set_config_display(fit_video: DWYCO_BOOL;
                                  integral_zoom: DWYCO_BOOL;
                                  jumbo_buttons: DWYCO_BOOL;
                                  no_buttons: DWYCO_BOOL;
                                  small_buttons: DWYCO_BOOL;
                                  mini_toolbar: DWYCO_BOOL;
                                  blinky: DWYCO_BOOL;
                                  dummy : Integer
                                  ): Integer ;stdcall   ;

function dwyco_get_config_display(var fit_video: DWYCO_BOOL;
                                  var integral_zoom: DWYCO_BOOL;
                                  var jumbo_buttons: DWYCO_BOOL;
                                  var no_buttons: DWYCO_BOOL;
                                  var small_buttons: DWYCO_BOOL;
                                  var mini_toolbar: DWYCO_BOOL;
                                  var blinky: DWYCO_BOOL;
                                  dummy : Integer
                                  ): Integer ;stdcall   ;

function dwyco_set_conn_remote_data(connrecv: DWYCO_BOOL;
                                    connsend: DWYCO_BOOL;
                                    connchat: DWYCO_BOOL;
                                    connrecv_audio: DWYCO_BOOL;
                                    connsend_audio: DWYCO_BOOL;
                                    block_on_connect: DWYCO_BOOL;
                                    pchat: DWYCO_BOOL;
                                    pw: PChar;
                                    dummy : Integer
                                    ): Integer ;stdcall   ;

function dwyco_get_conn_remote_data(var connrecv: DWYCO_BOOL;
                                    var connsend: DWYCO_BOOL;
                                    var connchat: DWYCO_BOOL;
                                    var connrecv_audio: DWYCO_BOOL;
                                    var connsend_audio: DWYCO_BOOL;
                                    var block_on_connect: DWYCO_BOOL;
                                    var pchat: DWYCO_BOOL;
                                    var pw: PChar;
                                    dummy : Integer
                                    ): Integer ;stdcall   ;

function dwyco_set_raw_files(raw_files_list: PChar;
                             raw_files_pattern: PChar;
                             use_list_of_files: DWYCO_BOOL;
                             use_pattern: DWYCO_BOOL;
                             preload: DWYCO_BOOL;
                             dummy : Integer
                             ): Integer ;stdcall   ;

function dwyco_get_raw_files(var raw_files_list: PChar;
                             var raw_files_pattern: PChar;
                             var use_list_of_files: DWYCO_BOOL;
                             var use_pattern: DWYCO_BOOL;
                             var preload: DWYCO_BOOL;
                             dummy : Integer
                             ): Integer ;stdcall   ;

function dwyco_set_video_input(device_name: PChar;
                               coded: DWYCO_BOOL;
                               raw: DWYCO_BOOL;
                               vfw: DWYCO_BOOL;
                               no_video: DWYCO_BOOL;
                               device_index: Integer;
                               dummy : Integer
                               ): Integer ;stdcall   ;

function dwyco_get_video_input(var device_name: PChar;
                               var coded: DWYCO_BOOL;
                               var raw: DWYCO_BOOL;
                               var vfw: DWYCO_BOOL;
                               var no_video: DWYCO_BOOL;
                               var device_index: Integer;
                               dummy : Integer
                               ): Integer ;stdcall   ;

function dwyco_set_call_accept(max_audio: Integer;
                               max_chat: Integer;
                               max_video: Integer;
                               max_audio_recv: Integer;
                               max_video_recv: Integer;
                               max_pchat: Integer;
                               pw: PChar;
                               auto_accept: DWYCO_BOOL;
                               require_pw: DWYCO_BOOL;
                               accept_any_rating: DWYCO_BOOL;
                               no_listen: DWYCO_BOOL;
                             dummy : Integer
                               ): Integer ;stdcall   ;

function dwyco_get_call_accept(var max_audio: Integer;
                               var max_chat: Integer;
                               var max_video: Integer;
                               var max_audio_recv: Integer;
                               var max_video_recv: Integer;
                               var max_pchat: Integer;
                               var pw: PChar;
                               var auto_accept: DWYCO_BOOL;
                               var require_pw: DWYCO_BOOL;
                               var accept_any_rating: DWYCO_BOOL;
                               var no_listen: DWYCO_BOOL;
                               dummy : Integer
                               ): Integer ;stdcall   ;

function dwyco_set_zap_data(always_server: DWYCO_BOOL;
                            always_accept: DWYCO_BOOL;
                            ignore: DWYCO_BOOL;
                            recv_all: DWYCO_BOOL;
                            zsave: DWYCO_BOOL;
                            use_old_timing: DWYCO_BOOL;
                            save_sent: DWYCO_BOOL;
                            no_forward_default: DWYCO_BOOL;
                            dummy : Integer
                            ): Integer ;stdcall   ;

function dwyco_get_zap_data(var always_server: DWYCO_BOOL;
                            var always_accept: DWYCO_BOOL;
                            var ignore: DWYCO_BOOL;
                            var recv_all: DWYCO_BOOL;
                            var zsave: DWYCO_BOOL;
                            var use_old_timing: DWYCO_BOOL;
                            var save_sent: DWYCO_BOOL;
                            var no_forward_default: DWYCO_BOOL;
                            dummy : Integer
                            ): Integer ;stdcall   ;



function dwyco_set_rate_tweaks(expected_rate: LongInt;
                               frame_rate: Double;
                               max_udp_bytes: LongInt;
                               ref_interval: LongInt;
                               link_speed: LongInt;
                               link_speed_recv: LongInt;
                               dummy : Integer
                               ): Integer ;stdcall   ;



function dwyco_get_rate_tweaks(var expected_rate: LongInt;
                               var frame_rate: Double;
                               var max_udp_bytes: LongInt;
                               var ref_interval: LongInt;
                               var link_speed: LongInt;
                               var link_speed_recv: LongInt;
                               dummy : Integer
                               ): Integer ;stdcall   ;

// used for media select arg in the net data
//
const DWYCO_MEDIA_SELECT_DIRECT_ONLY = 0; // not impl.
const DWYCO_MEDIA_SELECT_TCP_ONLY = 1;    // force tcp SAC only
const DWYCO_MEDIA_SELECT_UDP_ONLY = 2;    // force udp SAC only
const DWYCO_MEDIA_SELECT_HANDSHAKE = 3;   // try to figure out cheapest way

function dwyco_set_net_data(primary_port: Integer;
                            secondary_port: Integer;
                            pal_port: Integer;
                            force_non_firewall_friendly: DWYCO_BOOL;
                            nat_primary_port: Integer;
                            nat_secondary_port: Integer;
                            nat_pal_port: Integer;
                            advertise_nat_ports: DWYCO_BOOL;
                            disable_upnp : Integer;
                            media_select : Integer;
                            dummy : Integer
                            ): Integer ;stdcall   ;

function dwyco_get_net_data(var primary_port: Integer;
                            var secondary_port: Integer;
                            var pal_port: Integer;
                            var force_non_firewall_friendly: DWYCO_BOOL;
                            var nat_primary_port: Integer;
                            var nat_secondary_port: Integer;
                            var nat_pal_port: Integer;
                            var advertise_nat_ports: DWYCO_BOOL;
                            var disable_upnp: Integer;
                            var media_select: Integer;
                            dummy : Integer
                            ): Integer ;stdcall   ;

{$IFDEF WIN32}
